--- a/Day1/style.css
+++ b/Day1/style.css
@@ -106,7 +106,6 @@ body {
   height: 40px;
   background-color: transparent;
   border: none;
-  padding-left: 53px;
   font-size: 16px;
   color: #fff;
 }
@@ -119,6 +118,9 @@ body {
   width: 50px;
   height: 68px;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* RADIO BUTTONS START */
@@ -150,17 +152,3 @@ body {
   color: #2ccdea;
 }
 /* RADIO BUTTONS ENDS */
-
-.component_filter {
-  background: #3d3f43;
-  border-radius: 5px;
-  padding: 40px 45px;
-}
-
-.component_filter .filter_form ul li {
-  display: flex;
-}
-
-.component_filter .filter_form ul li :not(last-child) {
-  margin-bottom: 20px;
-}
